--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,10 +1,13 @@
 
 .header{
-	min-height: 30px;
+	min-height: 8px;
 	background-color: #2e3639;
 	margin-bottom: 30px;
 }
 
+.centers{
+	text-align: center;
+}
 .header h1 {
 font-family: 'Rokkitt' !important;
 font-style: normal;
